tkg/2.1.0/antrea-network-policies/tkg/antrea-gw.yaml
apiVersion: crd.antrea.io/v1alpha1
kind: ClusterNetworkPolicy
metadata:
  name: allow-antrea-gw
spec:
  priority: 1
  tier: securityops
  appliedTo:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: metrics-server
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cert-manager
      podSelector:
        matchLabels:
          app.kubernetes.io/component: webhook
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: tanzu-system
      podSelector:
        matchLabels:
          app: secretgen-controller
  ingress:
    - action: Allow 
      from:
      - ipBlock:
          cidr: 100.96.0.1/32
      name: allowCPAntreaGW
      enableLogging: true
